--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,40 @@
-pandas
-numpy
+# Core ML Libraries
+pandas>=2.0.0
+numpy>=1.24.0
+scikit-learn>=1.3.0
+xgboost>=2.0.0
 
+# NLP
+nltk>=3.8.0
+
+# ArXiv API
+arxiv>=2.0.0
+
+# Web & API
+streamlit>=1.28.0
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+pydantic>=2.0.0
+
+# Visualization
+plotly>=5.17.0
+matplotlib>=3.8.0
+seaborn>=0.13.0
+
+# Utilities
+python-dotenv>=1.0.0
+pyyaml>=6.0.1
+requests>=2.31.0
+tqdm>=4.66.0
+
+# Model Persistence
+joblib>=1.3.0
+dill>=0.3.7
+
+# Development & Testing
+pytest>=7.4.0
+black>=23.10.0
+flake8>=6.1.0
+
+# Package Installation
 -e .
